--- a/css/login.css
+++ b/css/login.css
@@ -145,7 +145,7 @@ main{
 
 /* POPUP Criar Conta */
 .popup-wrapper{
-	display: none;
+	display: block;
 	background: rgba(0,0,0, 0.5);
 	position: fixed;
 	top: 0;
