--- a/css/home.css
+++ b/css/home.css
@@ -52,6 +52,7 @@ nav ul {
 
 nav a {
   text-decoration: none;
+  cursor: pointer;
 }
 
 p {
@@ -300,8 +301,12 @@ footer p {
   padding: 2vh 0;
 }
 
+a:active {
+  color: blue;
+}
+
 .popup-wrapper {
-  display: flex; /* mudar depois */
+  display: none; /* mudar depois */
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -393,7 +398,8 @@ footer p {
 }
 
 .popup-wrapper .signupCustomer,
-.popup-wrapper .signupScavenger {
+.popup-wrapper .signupScavenger,
+.popup-wrapper .signupScavenger2 {
   display: none; /* mudar depois */
   flex-direction: column;
   align-items: center;
@@ -411,37 +417,41 @@ footer p {
 .popup-wrapper .signup .popup-close,
 .popup-wrapper .signupCustomer .popup-close,
 .popup-wrapper .signupScavenger .popup-close,
+.popup-wrapper .signupScavenger2 .popup-close,
 .popup-wrapper .signupCustomer .returnSignup,
-.popup-wrapper .signupScavenger .returnSignup {
+.popup-wrapper .signupScavenger .returnSignup,
+.popup-wrapper .signupScavenger2 .returnSignupScavenger {
   color: #136a5a;
-  position: absolute;
+  position: relative;
   width: 2vw;
   height: 2vh;
   display: flex;
   justify-content: center;
-  cursor: pointer;
   background-color: white;
 }
 
 .popup-wrapper .signup .popup-close {
-  top: 5%;
-  left: 87%;
+  top: 1.5%;
+  left: 95%;
 }
 
 .popup-wrapper .signupCustomer .popup-close,
-.popup-wrapper .signupScavenger .popup-close {
-  top: 6%;
-  left: 67%;
+.popup-wrapper .signupScavenger .popup-close,
+.popup-wrapper .signupScavenger2 .popup-close {
+  bottom: 6.5%;
+  left: 45.5%;
 }
 
 .popup-wrapper .signupCustomer .returnSignup,
-.popup-wrapper .signupScavenger .returnSignup {
-  top: 6%;
-  right: 67%;
+.popup-wrapper .signupScavenger .returnSignup,
+.popup-wrapper .signupScavenger2 .returnSignupScavenger {
+  bottom: 2.6%;
+  right: 45.5%;
 }
 
 .popup-wrapper .signupCustomer .popup-content,
-.popup-wrapper .signupScavenger .popup-content {
+.popup-wrapper .signupScavenger .popup-content,
+.popup-wrapper .signupScavenger2 .popup-content {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -450,13 +460,15 @@ footer p {
 }
 
 .popup-wrapper .signupCustomer .popup-content h1,
-.popup-wrapper .signupScavenger .popup-content h1 {
+.popup-wrapper .signupScavenger .popup-content h1,
+.popup-wrapper .signupScavenger2 .popup-content h1 {
   color: #90c320;
   font-size: 2.2em;
 }
 
 .popup-wrapper .signupCustomer .popup-content form,
-.popup-wrapper .signupScavenger .popup-content form {
+.popup-wrapper .signupScavenger .popup-content,
+.popup-wrapper .signupScavenger2 .popup-content form {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -465,38 +477,187 @@ footer p {
 }
 
 .popup-wrapper .signupCustomer .popup-content form .background,
-.popup-wrapper .signupScavenger .popup-content form .background {
+.popup-wrapper .signupScavenger .popup-content .background {
   display: grid;
-  grid-template-areas: " table "
-                       " bot ";
-  width: 80%;
+  grid-template-areas:
+    " table "
+    " bot ";
+  width: 90%;
   border-radius: 20px 260px 30px 360px;
   background-color: rgba(144, 195, 32, 0.28);
-  margin: 10% 0;
+  margin: 7%;
 }
 
 .popup-wrapper .signupCustomer .popup-content form .background .table,
-.popup-wrapper .signupScavenger .popup-content form .background .table{
+.popup-wrapper .signupScavenger .popup-content .background .table {
   grid-area: table;
+  width: 95%;
+  margin: 0 auto;
   display: grid;
-  grid-template-columns: 40% 40%;
-  grid-template-rows: 10% 10% 10%;
-  width: 100%;
-  padding-top: 5%;
+  grid-template-columns: 45% 45%;
+  column-gap: 5%;
+  margin-top: 5%;
 }
 
 .popup-wrapper .signupCustomer .popup-content form .background .bot,
-.popup-wrapper .signupScavenger .popup-content form .background .bot{
+.popup-wrapper .signupScavenger .popup-content .background .bot {
   grid-area: bot;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 5% 0;
+  margin-bottom: 5%;
 }
 
-.popup-wrapper .signupCustomer {
+.popup-wrapper .signupCustomer .popup-content form .background .table input,
+.popup-wrapper .signupScavenger .popup-content .background .table input {
+  margin-bottom: 10%;
+}
+
+.popup-wrapper
+  .signupCustomer
+  .popup-content
+  form
+  .background
+  .bot
+  input[type="date"],
+.popup-wrapper
+  .signupScavenger
+  .popup-content
+  .background
+  .bot
+  input[type="date"] {
+  margin-bottom: 5%;
+}
+
+.popup-wrapper .signupCustomer .popup-content form .background .table > label,
+.popup-wrapper .signupScavenger .popup-content .background .table > label,
+.popup-wrapper .signupCustomer .popup-content form .background .bot > label,
+.popup-wrapper .signupScavenger .popup-content .background .bot > label{
+  font-weight: 500;
+  font-size: 1.2em;
+  margin-bottom: 1.5%;
+}
+
+.popup-wrapper .signupScavenger2 .popup-content form .background h2{
+  font-weight: 500;
+  font-size: 1.2em;
+  margin-bottom: 3%;
+  margin-top: 5%;
+}
+
+.popup-wrapper .signupScavenger2 .popup-content form .background{
+  width: 90%;
+  border-radius: 20px 260px 30px 360px;
+  background-color: rgba(144, 195, 32, 0.28);
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 6.8% 0;
+}
+
+.popup-wrapper .signupScavenger2 ul.materiais,
+.popup-wrapper .signupScavenger2 ul.dias {
+  width: 80%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  text-align: left;
+  
+}
+
+.popup-wrapper .signupScavenger2 ul.periodo {
+  width: 60%;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  margin: 0 auto;
+  margin-bottom: 5%;
+}
+
+.popup-wrapper .signupScavenger2 ul.periodo li {
+  padding-right: 2%;
+  margin: 0 auto;
+}
+
+.popup-wrapper .signupScavenger2 .popup-content form select {
+  font-family: "Poppins";
+  width: 80%;
+  background-color: #1c5407;
+  color: white;
+  height: 2em;
+  font-size: 1em;
+  border: 0;
+  border-radius: 10px;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 5%;
+}
+
+#signin {
+  display: none;
+}
+
+.checkbox-wrapper {
+  opacity: 0;
+}
+
+.signinCliente,
+.signinColetor {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  right: 1.5%;
+  width: 80px;
+  text-align: center;
+  background-color: #136a5a;
+  padding: 20px 10px;
+  border-radius: 5px;
+}
+
+#signin:checked + .checkbox-wrapper {
+  opacity: 1;
+  transition-duration: 2s;
+}
+
+#signin:checked + .checkbox-wrapper .signinCliente {
+  opacity: 1;
+  transition-delay: 0.1s;
+  transition-duration: 0.5s;
+  top: 90px;
+}
+
+#signin:checked + .checkbox-wrapper .signinColetor {
+  opacity: 1;
+  transition-delay: 0.15s;
+  transition-duration: 0.7s;
+  top: 145px;
+}
+
+#signin:not(:checked) + .checkbox-wrapper {
+  opacity: 0;
+  transition-duration: 2s;
+}
+
+#signin:not(:checked) + .checkbox-wrapper .signinCliente {
+  opacity: 0;
+  transition-delay: 0.15s;
+  transition-duration: 0.7s;
+  top: 0;
+}
+
+#signin:not(:checked) + .checkbox-wrapper .signinColetor {
+  opacity: 0;
+  transition-delay: 0.1s;
+  transition-duration: 0.5s;
+  top: 0;
+}
+
+.checkbox-wrapper .signinCliente:hover,
+.checkbox-wrapper .signinColetor:hover {
+  font-size: 20px;
+  width: 110px;
+  border-left: 5px solid #90c320;
 }
 
 /* RESPONSIVIDADE */
