--- a/css/customer/newCollect.css
+++ b/css/customer/newCollect.css
@@ -3,16 +3,21 @@ main .box{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
     width: 100%;
+    height: 100vh;
+    margin-bottom: 10%;
 }
 
 main .box h2{
     color: #90C320;
     font-size: 1.5em;
-    padding-top: 5%;
-    padding-bottom: 3%;
+    margin-top: 5%;
+    margin-bottom: 3%;
     text-align: center;
+}
+
+main .box h2:first-of-type{
+    margin-top: 0;
 }
 
 .box ul.materiais, .box ul.dias{
