--- a/css/login.css
+++ b/css/login.css
@@ -74,6 +74,7 @@ main .rightSide {
 }
 
 .rightSide .content label {
+  display: block;
   color: #136a5a;
   margin: 5% 0;
   font-size: 1.3em;
@@ -81,6 +82,10 @@ main .rightSide {
 
 .rightSide .content label:first-of-type {
   margin-top: 0;
+}
+
+.rightSide .content input{
+  width: 100%;
 }
 
 button {
